# openai-chat-app-entra-auth-builtin

./: .env.sample  .gitignore  .pre-commit-config.yaml  DEPENDENCY_FIX.md  README.md  URLLIB3_UPGRADE.md  azure.yaml  ps-rule.yaml  resolve_dependencies.py  urllib3_upgrade_verification.sh
.devcontainer/: devcontainer.json
.github/workflows/: azure-bicep-validate.yaml  azure-dev.yaml  python-check.yaml
.venv_test/: pyvenv.cfg
docs/: README.md  customize_deploy.md  deploy_existing.md
infra/: aca.bicep  main.bicep  main.parameters.json  main.test.bicep
infra/core/host/: container-app.bicep  container-apps-auth.bicep
infra/core/security/: identity.bicep  keyvault.bicep
scripts/: auth_common.py  auth_init.ps1  auth_init.py  auth_init.sh  auth_update.ps1  auth_update.py  auth_update.sh  load_python_env.sh  loadenv.ps1  loadenv.sh  requirements.in  requirements.txt  setup_for_external_id.ps1  setup_for_external_id.py  setup_for_external_id.sh  unload_azd_env.ps1  unload_azd_env.sh
src/: pyproject.toml  requirements.txt
src/quartapp/: __init__.py  chat.py
src/quartapp/templates/: index.html
tests/: conftest.py  mock_cred.py  test_app.py
tests/snapshots/test_app/test_chat_stream_text/: result.jsonlines
tests/snapshots/test_app/test_chat_stream_text_history/: result.jsonlines
